# syster

./: .copilot-instructions.md  .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  TODO.md  WEB_PACKAGES_README.md  WEB_PACKAGES_TESTING.md  bunfig.toml  package.json  rustfmt.toml  test-semantic-tokens.sysml  test-utf16.sysml  test_allocation_parse.sysml  test_private_import.sysml  todo.md
crates/syster-base/: Cargo.toml  rustfmt.toml
crates/syster-base/src/: parser.rs
crates/syster-base/src/core/: constants.rs  error_codes.rs  events.rs  file_io.rs  mod.rs  operation.rs  text_utils.rs  traits.rs
crates/syster-base/src/core/error_codes/: tests.rs
crates/syster-base/src/core/tests/: tests_constants.rs
crates/syster-base/src/language/: mod.rs
crates/syster-base/src/language/kerml/model/: enums.rs  mod.rs
crates/syster-base/src/language/kerml/syntax/: enums.rs  mod.rs  tests.rs
crates/syster-base/src/language/sysml/: mod.rs  populator.rs  validator.rs
crates/syster-base/src/language/sysml/model/: mod.rs  types.rs
crates/syster-base/src/language/sysml/populator/: helpers.rs  population.rs  tests.rs  visitors.rs
crates/syster-base/src/language/sysml/syntax/: ast.rs  constants.rs  mod.rs
crates/syster-base/src/language/sysml/validator/: tests.rs
crates/syster-base/src/parser/: kerml.pest  kerml.rs  keywords.rs  sysml.pest  sysml.rs
crates/syster-base/src/project/: diagnostic_publisher.rs  file_loader.rs  mod.rs  parse_result.rs  stdlib_loader.rs  workspace_loader.rs
crates/syster-base/src/project/diagnostic_publisher/: tests.rs
crates/syster-base/src/project/file_loader/: collection.rs  parsing.rs  tests.rs
crates/syster-base/src/project/parse_result/: tests.rs
crates/syster-base/src/project/stdlib_loader/: loader.rs  tests.rs
crates/syster-base/src/project/workspace_loader/: tests.rs
crates/syster-base/src/semantic/: analyzer.rs  diagnostic.rs  error.rs  events.rs  graph.rs  graphs.rs  import_extractor.rs  mod.rs  reference_collector.rs  relationship_validator.rs  resolver.rs  symbol_table.rs  workspace.rs
crates/syster-base/src/semantic/adapters/: factory.rs  kerml_adapter.rs  mod.rs  sysml_adapter.rs  tests.rs  validator_factory.rs
crates/syster-base/src/semantic/analyzer/: context.rs  semantic_analyzer.rs  tests.rs  validator.rs
crates/syster-base/src/semantic/diagnostic/: tests.rs
crates/syster-base/src/semantic/error/: tests.rs
crates/syster-base/src/semantic/graph/: one_to_many.rs  one_to_one.rs  relationship_graph.rs  symmetric.rs  tests.rs
crates/syster-base/src/semantic/graphs/: dependency_graph.rs  one_to_many_graph.rs  one_to_one_graph.rs  one_to_one_graph_onetoonegraph_test.rs  relationship_graph.rs  symmetric_graph_symmetricgraph_test.rs  tests.rs
crates/syster-base/src/semantic/import_extractor/: tests.rs
crates/syster-base/src/semantic/processors/: mod.rs  reference_collector.rs  semantic_token_collector.rs  semantic_token_collector_normalize_path_test.rs  semantic_token_collector_semantictokencollector_test.rs  semantic_token_text_extraction_test.rs  tests.rs
crates/syster-base/src/semantic/reference_collector/: tests.rs
crates/syster-base/src/semantic/relationship_validator/: tests.rs
crates/syster-base/src/semantic/resolver/: name_resolver.rs  tests.rs
crates/syster-base/src/semantic/symbol_table/: find_in_scope_chain_test.rs  lookup.rs  scope.rs  symbol.rs  table.rs  tests.rs
crates/syster-base/src/semantic/types/: diagnostic.rs  error.rs  events.rs  folding.rs  mod.rs  semantic_role.rs  tests.rs  types_error_test.rs  types_semantic_role_test.rs
crates/syster-base/src/semantic/workspace/: file.rs  populator.rs  tests.rs
crates/syster-base/src/syntax/: file.rs  file_syntaxfile_test.rs  mod.rs  parser.rs
crates/syster-base/src/syntax/kerml/: parser.rs
crates/syster-base/src/syntax/sysml/: mod.rs  parser.rs
crates/syster-base/src/syntax/tests/: tests_file_syntaxfile.rs
crates/syster-base/tests/: architecture_helpers.rs  architecture_tests.rs  documentation_tests.rs  kerml_import_detection_test.rs  kerml_imports_test.rs  multiple_packages_test.rs  stdlib_kerml_test.rs  tests.rs  tests_kerml_imports.rs  tests_parser_kerml.rs  tests_parser_sysml.rs  tests_semantic_resolver.rs  tests_semantic_sysml_graph.rs  tests_sysml_examples.rs
crates/syster-base/tests/core/: constants_test.rs  mod.rs  traits_test.rs
crates/syster-base/tests/parser/: expression_tests.rs  kerml_parser_test.rs  kerml_tests.rs  keywords_test.rs  mod.rs  span_tests.rs  stdlib_sysml_tests.rs  sysml_tests.rs  test_kerml_stdlib.rs  tests_sysml.rs
crates/syster-base/tests/semantic/: cross_file_tests.rs  diagnostic_test.rs  folding_extract_folding_ranges_test.rs  folding_tests.rs  import_tests.rs  kerml_selection_test.rs  kerml_visitor_tests.rs  mod.rs  selection_collect_feature_spans_test.rs  selection_tests.rs  stdlib_symbols_test.rs  sysml_graph_tests.rs  sysml_parsing_tests.rs  sysml_visitor_tests.rs  tests_sysml_parsing.rs  tests_sysml_visitor.rs  visitor_astvisitor_test.rs
crates/syster-base/tests/syntax/: formatter_syntax_kind_test.rs  mod.rs
crates/syster-base/tests/sysml-examples/: .gitkeep
crates/syster-cli/: Cargo.toml
crates/syster-cli/src/: lib.rs  main.rs
crates/syster-cli/tests/: cli_tests.rs
crates/syster-lsp/: Cargo.toml  build.rs
crates/syster-lsp/src/: backend.rs  main.rs  server.rs
crates/syster-lsp/src/backend/: tests.rs
crates/syster-lsp/src/main/: tests.rs
crates/syster-lsp/src/server/: code_lens.rs  completion.rs  core.rs  core_lspserver_test.rs  definition.rs  document.rs  document_symbols.rs  folding_range.rs  helpers.rs  helpers_format_symbol_declaration_test.rs  lsp_server_state_test.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  tests.rs
crates/syster-lsp/src/server/tests/: mod.rs  tests_code_lens.rs  tests_helpers.rs  tests_helpers_apply_text_edit.rs  tests_helpers_format_rich_hover.rs  tests_helpers_format_symbol_declaration.rs  tests_server.rs
crates/syster-lsp/tests/: integration_tests.rs  tests_integration.rs
src/: kerml.pest  (+3 more)
(+159 files in other folders)
