[package]
name = "syster"
version = "0.1.0"
edition = "2024"
authors = ["jade-codes"]
license = "MIT"
repository = "https://github.com/jade-codes/syster"

[dependencies]
pest = "2.7"
pest_derive = "2.7"

[dev-dependencies]
rstest = "0.23"

[lints.clippy]
# Enforce explicit error handling
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"

# Code quality
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

# Performance
inefficient_to_string = "warn"
unnecessary_wraps = "warn"

# Style consistency
enum_glob_use = "warn"
wildcard_imports = "warn"

# Deny by category (set explicit priority to avoid ambiguity)
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
