[package]
name = "syster-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "syster"
path = "src/main.rs"

[lib]
name = "syster_cli"
path = "src/lib.rs"

[dependencies]
syster-base = { path = "../syster-base" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
