[package]
name = "syster-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "syster-lsp"
path = "src/main.rs"

[dependencies]
syster-base = { path = "../syster-base" }
async-lsp = { version = "0.2", features = ["tokio", "tracing"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
percent-encoding = "2.3"
